<resources>
    <string name="app_name">CountriesApiApp</string>

    <string name="region">Region: %1$s</string>
    <string name="capital">Capital: %1$s</string>
    <string name="currency">Currency: %1$s, %2$s</string>
    <string name="timezone">Timezone: %1$s</string>

    <string name="flag_of_the_country">Flag of the country</string>
    <string name="refresh_button">Refresh button</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>