<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textDirection="firstStrongLtr"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Russia" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/flag_of_the_country"
            android:paddingVertical="16dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/capital"
            android:textDirection="firstStrongLtr"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/currency"
            android:textDirection="firstStrongLtr"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/region"
            android:textDirection="firstStrongLtr"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_timezone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/timezone"
            android:textDirection="firstStrongLtr"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>